Adapt Java bindings to latest changes in Explicit Disclosure (#17665)
* WIP

* Fixes

* Adapted to latest changes
* create_event_payload -> created_event_blob
* non-backwards compatible wrt CreatedEvent and DisclosedContract

* Update language-support/java/bindings/src/main/java/com/daml/ledger/javaapi/data/Filter.java

Co-authored-by: Raphael Speyer <raphael.speyer@digitalasset.com>

* Update language-support/java/bindings/src/main/java/com/daml/ledger/javaapi/data/Filter.java

Co-authored-by: Raphael Speyer <raphael.speyer@digitalasset.com>

* Fix comment

---------

Co-authored-by: Raphael Speyer <raphael.speyer@digitalasset.com>